--- a/solidity/ecdsa/README.adoc
+++ b/solidity/ecdsa/README.adoc
@@ -3,6 +3,8 @@
 
 = Keep ECDSA v2
 
+https://github.com/keep-network/keep-core/.github/workflows/solidity-test.yml[image:https://img.shields.io/github/workflow/status/keep-network/sortition-pools/Test%20Solidity?event=schedule&label=ECDSA%20contracts%20build[Solidity tests status]]
+
 The Keep Network offers threshold ECDSA protocol to generate ECDSA wallets
 without any single signer having access to the corresponding private key. This
 functionality is used by TBTC v2 to manage Bitcoin wallets used by the TBTC Bridge.
