--- a/CONTRIBUTING.adoc
+++ b/CONTRIBUTING.adoc
@@ -14,7 +14,7 @@ propose changes to this document in a pull request.
 3. Follow the
    https://github.com/keep-network/keep-core/tree/main/docs/development[installation
    & build steps] in the developer documentation.
-4. Setup the <<Development Tooling>>.
+4. Set up the <<Development Tooling>>.
 5. Open a PR against the `main` branch and describe the change you
    are intending to undertake in the PR description.
 
@@ -36,8 +36,7 @@ be signed].
 === Continuous Integration
 
 Keep uses https://github.com/keep-network/keep-core/actions[Github Actions] for
-continuous integration. All jobs (including tests, linting) must be green to
-merge a PR.
+continuous integration. All jobs must be green to merge a PR.
 
 === Pre-commit
 
